// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should not render either a title nor a close-button when title is not provided 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="Modal__overlay"
    >
      <div
        aria-label="Content Label"
        aria-modal="true"
        class="Modal__content Dialog"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="Dialog__content"
        >
          Body of the dialog
        </div>
        <div
          class="Dialog__actions"
        >
          <button
            class="Button Button--variant_filled Button--context_primary"
            style="width: auto;"
            type="button"
          >
            OK
          </button>
          <button
            class="Button Button--variant_ghost Button--context_secondary"
            style="width: auto;"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dialog should render correctly with a title 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="Modal__overlay"
    >
      <div
        aria-label="Content Label"
        aria-modal="true"
        class="Modal__content Dialog"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="Dialog__header"
          role="alert"
        >
          <h3
            class="Heading Heading--level_h3 Dialog__title"
          >
            Title
          </h3>
          <button
            aria-label="Close"
            class="Button Button--variant_ghost Button--context_secondary Dialog__closeButton"
            style="width: auto;"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
        <div
          class="Dialog__content"
        >
          Body of the dialog
        </div>
        <div
          class="Dialog__actions"
        >
          <button
            class="Button Button--variant_filled Button--context_primary"
            style="width: auto;"
            type="button"
          >
            OK
          </button>
          <button
            class="Button Button--variant_ghost Button--context_secondary"
            style="width: auto;"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
